<resources>
    <string-array name="language_list">
        <item>English</item>
        <item>Español</item>
    </string-array>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El usuario es incorrecto</string>
    <string name="error_invalid_password">La contraseña es demadiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="preferencia_idioma">ESP</string>
    <string name="login_welcome">Bienvenido</string>
    <string name="login_subtitle_text">Iniciar Sesión</string>
    <string name="nav_header_title">Policía Nacional de Colombia</string>
    <string name="nav_header_subtitle">Código Nacional de Policía y Convivencia para Vivir en Paz</string>
    <string name="capacitacion">Material de Consulta</string>
    <string name="menu_idioma">Language</string>
    <string name="menu_cnpc">CNPC</string>
    <string name="multas">Multas</string>
    <string name="menu_funcionario">Consulta Ciudadano</string>
    <string name="menu_policia">Identifica al Policía</string>
    <string name="menu_psc">Portal Ciudadano</string>
    <string name="menu_games">Juegos</string>
    <string name="menu_capacitacion">Material de Consulta</string>
    <string name="menu_login">Iniciar Sesión Policial</string>
    <string name="menu_puntos">Autoridades Competentes</string>
    <string name="menu_cerrar">Cerrar Sesión Policial</string>
    <string name="Ley">LEY 1801 DE 2016</string>
    <string name="LeyFecha">(Julio 29)</string>
    <string name="LeySubtitulo">POR LA CUAL:</string>
    <string name="LeyCongreso">EL CONGRESO DE COLOMBIA</string>
    <string name="LeyDecreta">DECRETA:</string>
    <string name="LeyNombre">CÓDIGO NACIONAL DE POLICÍA Y CONVIVENCIA.</string>
    <string name="title_activity_idioma">Idioma</string>
    <string name="button_aceptar">Aceptar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="toast_locale_success">Nuevo idioma</string>
    <string name="toast_locale_exception">El idioma no se pudo cambiar</string>
    <string name="idioma_header_title">IDIOMA</string>
    <string name="idioma_header_subtitle">Escoge un idioma</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="read_barcode">ESCANEAR</string>
    <string name="auto_focus">Enfoque automático</string>
    <string name="use_flash">Modo nocturno</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="policia_header_title">IDENTIFICACION POLICÍA</string>
    <string name="policia_header_subtitle">Escanee el código de barras del carnet del policía.</string>
    <string name="encuesta_header_title">ENCUESTA</string>
    <string name="encuesta_header_subtitle">Ayúdenos a responder esta breve encuesta</string>
    <string name="button_responder">PARTICIPAR</string>
    <string name="button_no_responder">FALSO</string>
    <string name="button_si_responder">CIERTO</string>
    <string name="menu_clickable">SPAN TEXT</string>
    <string name="ver_procedimiento">ver procedimiento</string>
    <string name="language">es</string>
    <string name="country">CO</string>
    <string name="titulo_multa_categoria">CATEGORÍAS</string>
    <string name="articlo_medidas">MEDIDAS</string>
    <string name="articlo_comportamiento">COMPORTAMIENTOS</string>
    <string name="title_activity_articulo_capitulo">Código de Policía</string>
    <string name="title_activity_portal">Portal Ciudadano</string>
    <string name="title_activity_policia">Identificación Policía</string>
    <string name="title_activity_barcode">Identificación Policía</string>
    <string name="title_activity_puntos">Autoridades Competentes</string>
    <string name="title_activity_comparendos">Consulta Ciudadano</string>
    <string name="title_activity_encuesta">Encuesta</string>
    <string name="title_activity_capacitación">Material de Consulta</string>
    <string-array name="listadoMenuPsc">
        <item>!ADenunciar!</item>
        <item>CONSULTA DE ANTECEDENTES PENALES</item>
        <item>REGISTRO DE DOCUMENTOS EXTRAVIADOS</item>
        <item>COMUNICACIÓN DE APERTURA DE ESTABLECIMIENTOS</item>
        <item>REGISTRO PREGUNTAS, QUEJAS, RECLAMOS Y SUGERENCIAS (PQRS)</item>
        <item>DOCUMENTOS RECUPERADOS</item>
        <item>DENUNCIAR HURTO DE CELULARES</item>
        <item>SINTONIZAR RADIO INSTITUCIONAL</item>
    </string-array>
    <string-array name="comparendos_calendario_dias">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="comparendos_calendario_meses">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="listaMedidas">
        <item>PROCEDIMIENTO CIUDADANO</item>
        <item>MEDIDAS</item>
        <item>COMPETENCIAS</item>
    </string-array>
    <string-array name="tipoDocumentoCargando">
        <item>Cargando lista...</item>
    </string-array>
    <string name="showcaseEntendido">Entendido</string>
    <string name="showcaseSiguiente">Siguiente</string>
    <string name="comparendos_header_title">Consulta Ciudadano</string>
    <string name="comparendos_header_subtitle">Sistema Registro Nacional Medidas Correctivas RNMC</string>
    <string name="comparendos_tipo_documento">Tipo Documento</string>
    <string name="button_comparendos_buscar">BUSCAR</string>
    <string name="comparendos_identificacion">Identificación</string>
    <string name="compartir_articulo">Comparte este artículo con alguna aplicación</string>
    <string name="app_name">Código De Policía</string>
    <string name="title_activity_principal">Codigo De Policia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuracion</string>
    <string name="dbpath">/data/data/com.policia.codigopolicia/databases/</string>
    <string name="dbname">codigopolicia</string>
    <string name="dbversion">1400</string>
    <string name="SCRIPT">SCRIPT.sql</string>
    <string name="token">Q29tcG9ydGFtaWVudG9Qb2xpY2lhbEZJVA==</string>
    <string name="srvrenec">http://192.168.2.173/ws_renec/ServiciosRenec.asmx/ConsultaPersonasRenec?Documento=</string>
    <string name="srvapplogin">https://apiadenunciarrnmc.policia.gov.co/ponal_api/usuario/</string>
    <string name="srvappmoviles">https://apiadenunciarrnmc.policia.gov.co/wsCnpcApp/CNPC.svc/</string>
    <string-array name="listadoUrlPsc">
        <item>policia.denunciavirtual</item>
        <item>https://antecedentes.policia.gov.co:7005/WebJudicial/index.xhtml</item>
        <item>https://www.policia.gov.co/documentos-extraviados</item>
        <item>https://www.policia.gov.co/codigo-nacional-policia/comunicaci%C3%B3n-apertura-establecimientos</item>
        <item>https://www.policia.gov.co/pqrs</item>
        <item>https://www.policia.gov.co/documentos-recuperados</item>
        <item>https://www.policia.gov.co/denuncia-virtual/hurto-personas</item>
        <item>https://radio.policia.gov.co:8080/bogota</item>
    </string-array>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string-array name="listaDepartamentos">
        <item>AMAZONAS</item>
        <item>ANTIOQUIA</item>
        <item>ARAUCA</item>
        <item>ATLANTICO</item>
        <item>BOGOTA</item>
        <item>BOLIVAR</item>
        <item>BOYACA</item>
        <item>CALDAS</item>
        <item>CAQUETA</item>
        <item>CASANARE</item>
        <item>CAUCA</item>
        <item>CESAR</item>
        <item>CHOCO</item>
        <item>CORDOBA</item>
        <item>CUNDINAMARCA</item>
        <item>GUAINIA</item>
        <item>GUAVIARE</item>
        <item>HUILA</item>
        <item>LA GUAJIRA</item>
        <item>MAGDALENA</item>
        <item>META</item>
        <item>NARINO</item>
        <item>NORTE DE SANTANDER</item>
        <item>PUTUMAYO</item>
        <item>QUINDIO</item>
        <item>RISARALDA</item>
        <item>SAN ANDRES Y PROVIDENCIA</item>
        <item>SANTANDER</item>
        <item>SUCRE</item>
        <item>TOLIMA</item>
        <item>VALLE DEL CAUCA</item>
        <item>VAUPES</item>
        <item>VICHADA</item>
    </string-array>
    <string-array name="listaDocumentos">
        <item>CODIGO POLICIA</item>
        <item>MULTAS</item>
    </string-array>
    <string name="titlebar">Samples</string>
    <string name="debug_button">TOGGLE DEBUG</string>
    <string name="cache_button">CHANGE CACHE</string>
    <string name="html_plantilla_articulos">ARTICULOS.html</string>
    <string name="html_plantilla_terminos">TERMINOS.html</string>
    <string name="html_plantilla_share">SHARE.txt</string>
    <string name="html_plantilla_procedimientos">PROCEDIMIENTOS.html</string>
    <string name="scanning_for_otp">Solicite al Policía el carné de identificación y coloque la cámara sobre el código de barras del documento.</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
</resources>