<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.policia.codigopolicia.IdiomaActivity">

    <ImageView
        android:id="@+id/imageViewCaricatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:src="@mipmap/img_policia_activity"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imageViewCaricatura">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/policia_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/policia_header_subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/linearTitle">

        <Switch
            android:id="@+id/auto_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:text="@string/auto_focus" />

        <Switch
            android:id="@+id/use_flash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:text="@string/use_flash"
            app:layout_constraintTop_toBottomOf="@id/auto_focus" />

    </LinearLayout>

    <TextView
        android:id="@+id/barcode_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toBottomOf="@id/linearOptions" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/imageViewFranja">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFF"
            android:onClick="clickCancelar"
            android:text="@string/button_cancelar"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonAceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="clickAceptar"
            android:text="@string/read_barcode"
            android:textColor="#FFF" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewFranja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/img_franja_ponal"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
